<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/material_grey_850"
            android:orientation="horizontal">

            <support.roundView
                android:id="@+id/view"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="5dp" />

            <TextView
                android:id="@+id/tvusername_review"
                style="@style/AppTheme.Textview.HapaTaxiRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_full_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/material_grey_800"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvdriver_username"
                style="@style/AppTheme.Textview.HapaTaxiRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <support.roundView
                android:id="@+id/view2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginRight="5dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView13"
                style="@style/AppTheme.Textview.HapaTaxiRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="From:"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:inputType="textMultiLine"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                style="@style/AppTheme.Textview.HapaTaxiRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="To:"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:inputType="textMultiLine"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorAccent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <RatingBar
            android:id="@+id/review_ratebar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="4"
            android:rating="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/material_grey_300"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:allowUndo="true"
            android:background="@color/background_material_light"
            android:breakStrategy="high_quality"
            android:ems="10"
            android:hint="@string/sample"
            android:inputType="textMultiLine"
            android:lines="8"
            android:padding="5dp"
            android:textColor="@color/material_grey_900" />

        <Button
            android:id="@+id/button2"
            style="@style/AppTheme.Button.HapaTaxiRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="35dp"
            android:text="@string/sub" />
    </LinearLayout>

</LinearLayout>